--- a/index.html
+++ b/index.html
@@ -4,6 +4,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <!--FACEBOOK-->
+    <meta property="og:image" content="img/three.jpg" />
+    <meta property="og:image:type" content="image/png" />
+    <meta property="og:image:width" content="1024" />
+    <meta property="og:image:height" content="1024" />
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:url"
+      content="https://josh-everett01.github.io/gd_relax/"
+    />
+    <meta property="og:title" content="Grateful Dead Relaxer" />
+    <meta property="og:description" content="Feed your head" />
     <title>Relaxer</title>
   </head>
   <body>
