--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
     <!--FACEBOOK-->
-    <meta property="og:image" content="img/three.jpg" />
+    <meta
+      property="og:image"
+      content="Users/joshuaeverett/workspace/coursework/webdev/gd_relax/img/three.jpg"
+    />
     <meta property="og:image:type" content="image/png" />
     <meta property="og:image:width" content="1024" />
     <meta property="og:image:height" content="1024" />
