Change image URL

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!--FACEBOOK-->
     <meta
       property="og:image"
-      content="Users/joshuaeverett/workspace/coursework/webdev/gd_relax/img/three.jpg"
+      content="https://cdn2.bigcommerce.com/server2800/677b8/products/29672/images/111283/00088__79568.1471453900.1100.1100.jpg?c=2"
     />
     <meta property="og:image:type" content="image/png" />
     <meta property="og:image:width" content="1024" />
